feat(eqdsk): add R,Z to flux coordinate interpolation and Sphinx docs
Add methods to eqdsk_file class for converting cylindrical (R, Z)
coordinates to flux coordinates (s_pol, theta):

- psi_at_rz: interpolate poloidal flux at arbitrary (R, Z) points
- spol_at_rz: compute normalized poloidal flux (0 at axis, 1 at LCFS)
- theta_geometric_at_rz: compute geometric poloidal angle
- rz_to_flux_coords: combined conversion to (s_pol, theta)

Uses scipy RegularGridInterpolator with cubic interpolation.
Automatically handles COCOS sign convention mismatches.

Also adds:
- Sphinx documentation with usage examples for plotting scalar data
  against flux coordinates
- GitHub Actions workflow to build and deploy docs to GitHub Pages
- Docs landing page at root, test dashboard at /test/

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,9 +114,37 @@ jobs:
             build/test_artifacts/**/*.jpeg
           if-no-files-found: warn
 
+  docs:
+    name: Build Sphinx docs
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+          cache: pip
+
+      - name: Install docs dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install sphinx sphinx-rtd-theme scipy numpy
+
+      - name: Build docs
+        run: |
+          cd docs && sphinx-build -b html . _build/html
+
+      - name: Upload docs artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: docs-html
+          path: docs/_build/html
+
   dashboard:
     name: Build test dashboard
-    needs: GNU
+    needs: [GNU, docs]
     if: ${{ needs.GNU.result == 'success' }}
     runs-on: ubuntu-latest
     permissions:
@@ -243,14 +271,33 @@ jobs:
 
           rm -f "$tmp_json"
 
+      - name: Download docs artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: docs-html
+          path: docs-html
+
+      - name: Merge docs with dashboard
+        run: |
+          set -euo pipefail
+          mkdir -p site
+          if [ -d dashboard/test ]; then
+            mv dashboard/test site/test
+          else
+            mkdir -p site/test
+          fi
+          cp -r docs-html/* site/
+          echo "Site structure:"
+          find site -type f | head -20
+
       - name: Configure Pages
         if: ${{ github.event_name == 'push' }}
         uses: actions/configure-pages@v5
 
-      - name: Upload dashboard artifact
+      - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dashboard'
+          path: './site'
 
   deploy:
     name: Deploy to GitHub Pages
