--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,11 @@ dev = [
   "pytest",
   "map2disc @ git+https://gitlab.mpcdf.mpg.de/gvec-group/map2disc.git",
 ]
+docs = [
+  "sphinx",
+  "sphinx-rtd-theme",
+  "scipy",
+]
 
 [project.scripts]
 libneo-write-chartmap = "libneo.chartmap_cli:main"
